--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "gulp": "^4.0.2",
     "gulp-tinypng-compress": "^1.2.5",
     "mongodb": "^4.5.0",
+    "mongoose": "^6.3.3",
     "redis": "^3.1.2",
-    "socket.io": "^4.0.1"
+    "socket.io": "^4.0.1",
+    "sudo": "^1.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
