--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "start-dev": "nodemon src/server.ts",
+    "start-dev": "nodemon server.ts",
+    "start": "node server.ts",
     "build": "tsc -p ."
   },
   "author": "",
