--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node src/server.ts",
     "start-dev": "nodemon src/server.ts",
     "build": "tsc -p ."
   },
