added start files

--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.ts",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/server.ts",
+    "start": "node dist/server.js",
     "start-dev": "nodemon src/server.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "postinstall": "tsc && mv -i -v public dist/ && rm -v -rf src"
   },
   "author": "",
   "license": "ISC",
