--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/server.js",
     "start-dev": "nodemon src/server.ts",
     "build": "tsc -p .",
-    "postinstall": "tsc && mv -i -v public dist/ && rm -v -rf src"
+    "postinstall": "tsc"
   },
   "author": "",
   "license": "ISC",
